--- a/samples/app/src/main/AndroidManifest.xml
+++ b/samples/app/src/main/AndroidManifest.xml
@@ -25,6 +25,8 @@
         </activity>
         <activity android:name=".MainActivityAuthId">
         </activity>
+        <activity android:name=".NextActivity">
+        </activity>
         <activity android:name=".LinkActivity">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW"/>
